[package]
name = "hal_x"
version = "0.1.0"
authors = ["Ilya Venner <ilyavenner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.cortex-m]
version = "0.7.1"
optional = true

[dependencies.once_cell]
version = "1.7.0"
default-features = false

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]

[features]
cortex_m = []
